<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:gravity="top"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="40dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:hint="@string/registration"
            android:text="@string/registration"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@color/colorPrimary"
            app:srcCompat="@mipmap/camera" />
        <!-- Email Label -->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:hint="@string/clicktotake"
            android:text="@string/clicktotake"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/background_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@color/colorPrimary"
                    android:hint="@string/location"
                    android:text="@string/location"
                    android:textColor="@android:color/black" />

                <Spinner
                    android:id="@+id/spinLoc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="2dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/edittextshape"
                    android:entries="@array/location"
                    android:padding="7dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:hint="@string/phone"
                    android:text="@string/phone"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/txtphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:background="@drawable/edittextshape"
                    android:inputType="phone"
                    android:padding="7dp"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:hint="@string/name"
                android:text="@string/name"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/txtname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextshape"
                android:ems="10"
                android:inputType="text"
                android:padding="7dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:hint="@string/password"
                android:text="@string/password"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextshape"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="7dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:hint="@string/email"
                android:text="@string/email"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextshape"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="7dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />
        </LinearLayout>
        <!-- Password Label -->


        <TextView
            android:id="@+id/textLoc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/background_light"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="14sp" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/buttonsquare"
            android:hint="@string/register"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:hint="@string/alreadyregister"
            android:paddingBottom="10dp"
            android:text="@string/alreadyregister"
            android:textColor="@android:color/black"
            android:textSize="16dip"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
